<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StatisticsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/margin_fragmenttitlecv_medium">

        <TextView
            android:id="@+id/tv_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            android:textStyle="bold"
            android:textSize="@dimen/text_itempokemon_medium"
            android:layout_marginTop="@dimen/margin_fragmenttitlecv_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/pb_we_he"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/cv_stats_we_eh"
            app:layout_constraintEnd_toEndOf="@+id/cv_stats_we_eh"
            app:layout_constraintStart_toStartOf="@+id/cv_stats_we_eh"
            app:layout_constraintTop_toTopOf="@+id/cv_stats_we_eh" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_stats_we_eh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_rv_medium"
            android:layout_marginTop="@dimen/margin_textfromborder_medium"
            android:layout_marginRight="@dimen/padding_rv_medium"
            android:layout_marginBottom="@dimen/padding_rv_medium"
            app:cardCornerRadius="@dimen/radius_main_medium"
            app:cardElevation="@dimen/elevation_main_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_stats">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_weight_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_textfromborder_medium"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/weight"
                        android:textSize="@dimen/text_fragmenttitlecv_medium"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_height_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_textfromborder_medium"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/height"
                        android:textSize="@dimen/text_fragmenttitlecv_medium"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_weight_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_fragmenttitlecv_medium"
                        android:gravity="center"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/tv_height_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_fragmenttitlecv_medium"
                        android:gravity="center"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_stats_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_base"
            android:textStyle="bold"
            android:textSize="@dimen/text_itempokemon_medium"
            android:layout_marginTop="@dimen/margin_fragmenttitlecv_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_stats_we_eh" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_stats_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_rv_medium"
            android:layout_marginTop="@dimen/margin_textfromborder_medium"
            android:layout_marginRight="@dimen/padding_rv_medium"
            android:layout_marginBottom="@dimen/padding_rv_medium"
            app:cardCornerRadius="@dimen/radius_main_medium"
            app:cardElevation="@dimen/elevation_main_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_stats_base">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_base_stats"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <ProgressBar
                    android:id="@+id/pb_stats"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>